// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Amenities container tests checks mapPropsToValues configs 1`] = `
Object {
  "amenities": Array [
    Object {
      "configurationAmenityOptions": Array [
        Object {
          "configurationSubAmenities": Array [],
          "iconUrl": null,
          "id": "730b21ec-2d4a-4ca4-85e8-966388a8c29b",
          "state": false,
          "title": "Off Grid Capable System",
          "tooltip": null,
          "type": "toggler",
        },
        Object {
          "configurationSubAmenities": Array [
            Object {
              "iconUrl": null,
              "id": "aafabb27-5065-4240-b99f-2baea96a535f",
              "state": false,
              "title": "Battery Storage(under 300 amp hours)",
              "tooltip": null,
            },
            Object {
              "iconUrl": null,
              "id": "c9a7626e-2f6b-43c5-a2f3-b78b64c87a2a",
              "state": false,
              "title": "Battery Storage(300+ amp hours)",
              "tooltip": null,
            },
            Object {
              "iconUrl": null,
              "id": "4c944b35-faaf-4515-a24f-1df59c1dfdd7",
              "state": false,
              "title": "Alternator Charger",
              "tooltip": null,
            },
            Object {
              "iconUrl": null,
              "id": "353d6e91-6039-4eca-9f86-e7b220f80a08",
              "state": false,
              "title": "Inverter",
              "tooltip": null,
            },
            Object {
              "iconUrl": null,
              "id": "5df5ee66-7b49-4e94-a440-277f602e0911",
              "state": false,
              "title": "A/C Electrical Outlets",
              "tooltip": null,
            },
            Object {
              "iconUrl": null,
              "id": "a8d4c375-b91a-467f-9f9e-351fd83e0f6b",
              "state": false,
              "title": "Solar Panels",
              "tooltip": null,
            },
          ],
          "iconUrl": null,
          "id": "1973200d-78b3-422c-9020-214189dbe826",
          "state": false,
          "title": "Electric Power System",
          "tooltip": null,
          "type": "checkbox",
        },
        Object {
          "configurationSubAmenities": Array [],
          "iconUrl": null,
          "id": "aa38a2e0-3d12-435c-a56f-d59fcca76114",
          "state": false,
          "title": "Propan Fuel System",
          "tooltip": null,
          "type": "checkbox",
        },
        Object {
          "configurationSubAmenities": Array [],
          "iconUrl": null,
          "id": "a02d7663-61c5-42bb-86e4-348f52c73f09",
          "state": false,
          "title": "Generator",
          "tooltip": null,
          "type": "checkbox",
        },
        Object {
          "configurationSubAmenities": Array [],
          "iconUrl": null,
          "id": "6c496237-3ef2-462b-ae3b-f2f4445ef666",
          "state": false,
          "title": "Shore Power Hookups",
          "tooltip": null,
          "type": "toggler",
        },
      ],
      "configurationSubAmenities": Array [],
      "iconUrl": null,
      "id": "480d527e-a832-4abc-9b6b-5c5b42850dc6",
      "title": "Power System",
    },
    Object {
      "configurationAmenityOptions": Array [],
      "configurationSubAmenities": Array [
        Object {
          "iconUrl": null,
          "id": "bf00cdfb-c28a-4065-b32d-dd6e7a3b6e4f",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Large Mattress",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "b3f036b6-8995-427a-a334-15fd5d20f49e",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Extra Storage",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "cd0e12e7-9d33-440e-b7be-f12d7fd0f97a",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Blackout Shades",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "9de56b33-8136-47af-8d0e-5c3e283b2368",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Sleep Sideways",
          "tooltip": null,
        },
      ],
      "iconUrl": null,
      "id": "a5f1e329-fa2a-4e91-b678-ccca813eb154",
      "title": "Bedroom",
    },
    Object {
      "configurationAmenityOptions": Array [],
      "configurationSubAmenities": Array [
        Object {
          "iconUrl": null,
          "id": "0925d8a2-3f91-4b2a-a33c-8c1971486a19",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Upgraded Speaker System",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "240b545f-6861-4e0f-b0ae-2d887f81f6e8",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Bluetooth Speaker",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "ce7a00ef-a5d9-4f01-87f6-74da13b2e797",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "TV",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "d7c5501b-6484-4137-8e4c-9f63f4b63f4e",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Wifi Router",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "4d3893f3-932b-4401-b627-58774ae30bd1",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Cell Signal Booster",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "70093afe-43ba-4706-89d1-23117632fa57",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Radio",
          "tooltip": null,
        },
      ],
      "iconUrl": null,
      "id": "8d08c5df-43bc-4597-938e-e18752a9664b",
      "title": "Entertainment",
    },
    Object {
      "configurationAmenityOptions": Array [],
      "configurationSubAmenities": Array [
        Object {
          "iconUrl": null,
          "id": "54cac3fb-2743-4953-b21b-225a2ea47447",
          "maxQuantity": 10,
          "quantity": 10,
          "state": false,
          "title": "King bed",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "b55ecf58-6a95-4bf3-b1fe-b8ac1bf1d2a0",
          "maxQuantity": 10,
          "quantity": 10,
          "state": false,
          "title": "Twin bed",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "8fd7b975-daa4-4a08-87b2-479a53f789e6",
          "maxQuantity": 10,
          "quantity": 10,
          "state": false,
          "title": "Queen bed",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "9152fe3c-456c-48bc-8b44-af28c11ae584",
          "maxQuantity": 10,
          "quantity": 10,
          "state": false,
          "title": "Single bed",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "ef65e471-a83c-46fb-9b0a-6e8583cf21b4",
          "maxQuantity": 10,
          "quantity": 10,
          "state": false,
          "title": "Bunk bed",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "156e80ca-432f-4850-aba7-e1abcbdc9b91",
          "maxQuantity": 10,
          "quantity": 10,
          "state": false,
          "title": "Dinette conversion",
          "tooltip": null,
        },
      ],
      "iconUrl": null,
      "id": "93ed1cf3-a645-4912-9d74-3000e67fe3d9",
      "title": "Accomodation",
    },
    Object {
      "configurationAmenityOptions": Array [],
      "configurationSubAmenities": Array [
        Object {
          "iconUrl": null,
          "id": "058785da-2eed-4c91-bac7-4791f54d0686",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "King bed",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "af80fb05-44ea-40ed-ac45-3765cedec993",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Twin bed",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "a78eb724-4bec-488d-a00e-8afe3997ce0a",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Queen bed",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "bd41dba4-e7e1-4e17-bc54-15ecfeeb0e87",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Single bed",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "2faad202-0c67-49fc-a785-2e1538666ba0",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Bunk bed",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "915089e7-48a1-4dc3-91f3-b7d82d465944",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Dinette conversion",
          "tooltip": null,
        },
      ],
      "iconUrl": null,
      "id": "245850cd-75b6-442f-a18b-837cd91ea6e5",
      "title": "Kitchen",
    },
    Object {
      "configurationAmenityOptions": Array [],
      "configurationSubAmenities": Array [
        Object {
          "iconUrl": null,
          "id": "2c826f37-91dc-4482-a67d-d2f2967b97c5",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "King bed",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "8be320dd-df33-4225-b8c4-6cb17c65e902",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Twin bed",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "de3c1f60-ea5d-4b8e-8964-d506c7530bfe",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Queen bed",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "b4894dcd-eb51-4953-b9fc-6b7142f95237",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Single bed",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "d9c7b20c-dec8-47f7-bf98-298a696f6844",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Bunk bed",
          "tooltip": null,
        },
        Object {
          "iconUrl": null,
          "id": "e544a8a3-3bc6-429c-8bdd-f3a26f9665dc",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Dinette conversion",
          "tooltip": null,
        },
      ],
      "iconUrl": null,
      "id": "ff75edbf-4f60-4b01-b3a0-79fbe2df8c10",
      "title": "Bathroom",
    },
    Object {
      "configurationAmenityOptions": Array [
        Object {
          "configurationSubAmenities": Array [
            Object {
              "iconUrl": null,
              "id": "8b5acb66-7cf1-4a6b-80ff-0c93d6859ae5",
              "state": false,
              "title": "Hookups Required For A/C",
              "tooltip": null,
            },
            Object {
              "iconUrl": null,
              "id": "3e047a0a-d37b-4d2f-8bf1-d5270b89090b",
              "state": false,
              "title": "Off Grid Air Conditioner",
              "tooltip": null,
            },
            Object {
              "iconUrl": null,
              "id": "a2226dd2-f731-42d5-b161-4a3179dbaed7",
              "state": false,
              "title": "A/C Only While Camper is On",
              "tooltip": null,
            },
          ],
          "iconUrl": null,
          "id": "38b30eae-7d94-4cc7-b08c-44409edece02",
          "state": false,
          "title": "Air conditioner",
          "tooltip": null,
          "type": "toggler",
        },
        Object {
          "configurationSubAmenities": Array [
            Object {
              "iconUrl": null,
              "id": "1eb933d8-ac20-4627-bbb8-d362261d03d1",
              "state": false,
              "title": "Portable Heater",
              "tooltip": null,
            },
            Object {
              "iconUrl": null,
              "id": "65418756-c3a6-4f5e-999a-9ffe62494536",
              "state": false,
              "title": "Air Heating System",
              "tooltip": null,
            },
            Object {
              "iconUrl": null,
              "id": "a4be548a-7f9b-4b8c-89d0-3c57cdfd7120",
              "state": false,
              "title": "Heating Only While Camper is On",
              "tooltip": null,
            },
          ],
          "iconUrl": null,
          "id": "4bf65e35-d340-486b-b498-1bb31bfa121d",
          "state": false,
          "title": "Heating",
          "tooltip": null,
          "type": "toggler",
        },
      ],
      "configurationSubAmenities": Array [
        Object {
          "iconUrl": null,
          "id": "996b052a-e8af-40ce-8749-cd48e906baaf",
          "maxQuantity": 0,
          "quantity": 0,
          "state": false,
          "title": "Ceiling Fan",
          "tooltip": null,
        },
      ],
      "iconUrl": null,
      "id": "eab0fdca-16c3-4184-aef8-311b1bf2ed01",
      "title": "Climate Control",
    },
  ],
  "amenityHealthSafetyItems": Array [
    Object {
      "active": true,
      "amenityHealthSafetyItemId": "2e9c8816-fbb2-48bf-9d17-885ffe1aa86a",
      "icon": "https://vancation-api-staging-assets.s3.us-west-1.amazonaws.com/store/healthsafety/80875471-87e6-42f9-82ac-d2c3ee4c300e/icon/82502e39c31a608d6cdf9f2882826f90.svg",
      "id": "80875471-87e6-42f9-82ac-d2c3ee4c300e",
      "title": "Social-distancing and other COVID-19-related guidelines apply",
    },
    Object {
      "active": false,
      "amenityHealthSafetyItemId": null,
      "icon": "https://vancation-api-staging-assets.s3.us-west-1.amazonaws.com/store/healthsafety/7c08c638-0823-449a-a696-4749421bd830/icon/d7779dbb02dee4b221db960f247c3a2d.svg",
      "id": "7c08c638-0823-449a-a696-4749421bd830",
      "title": "Security Campera / Recording Device",
    },
    Object {
      "active": false,
      "amenityHealthSafetyItemId": null,
      "icon": "https://vancation-api-staging-assets.s3.us-west-1.amazonaws.com/store/healthsafety/c962aef5-a0b8-455f-8d0c-e076a20086b0/icon/ba244de2af39acaf892d3656170d4586.svg",
      "id": "c962aef5-a0b8-455f-8d0c-e076a20086b0",
      "title": "Carbon Monoxide Alarm",
    },
    Object {
      "active": false,
      "amenityHealthSafetyItemId": null,
      "icon": "https://vancation-api-staging-assets.s3.us-west-1.amazonaws.com/store/healthsafety/742d00dd-8873-4589-92e2-de1dab997a34/icon/8a3cc70ea59e179612d152ad233a3655.svg",
      "id": "742d00dd-8873-4589-92e2-de1dab997a34",
      "title": "Smoke Alarm",
    },
    Object {
      "active": false,
      "amenityHealthSafetyItemId": null,
      "icon": "https://vancation-api-staging-assets.s3.us-west-1.amazonaws.com/store/healthsafety/0eee358a-ef4e-4545-8d66-76dc90c65434/icon/f31e769b3d5f598c32f0a2a4f1c59abe.svg",
      "id": "0eee358a-ef4e-4545-8d66-76dc90c65434",
      "title": "Fire Extinguisher",
    },
    Object {
      "active": true,
      "amenityHealthSafetyItemId": "d1e0f503-f1f6-4144-a5b5-8e318b159d39",
      "icon": "https://vancation-api-staging-assets.s3.us-west-1.amazonaws.com/store/healthsafety/e9284e42-3107-4527-88a3-5c1be8ccea5e/icon/f4d1f8594b6a9758a0c996388c1cd7a3.svg",
      "id": "e9284e42-3107-4527-88a3-5c1be8ccea5e",
      "title": "First Aid kit",
    },
  ],
}
`;

exports[`Amenities container tests checks validationSchema configs 1`] = `[Function]`;

exports[`Amenities container tests matches snapshot 1`] = `
<Amenities
  addCustomAccommodation={[Function]}
  amenities={
    Array [
      Object {
        "configurationAmenityOptions": Array [
          Object {
            "configurationSubAmenities": Array [],
            "iconUrl": null,
            "id": "730b21ec-2d4a-4ca4-85e8-966388a8c29b",
            "state": false,
            "title": "Off Grid Capable System",
            "tooltip": null,
            "type": "toggler",
          },
          Object {
            "configurationSubAmenities": Array [
              Object {
                "iconUrl": null,
                "id": "aafabb27-5065-4240-b99f-2baea96a535f",
                "state": false,
                "title": "Battery Storage(under 300 amp hours)",
                "tooltip": null,
              },
              Object {
                "iconUrl": null,
                "id": "c9a7626e-2f6b-43c5-a2f3-b78b64c87a2a",
                "state": false,
                "title": "Battery Storage(300+ amp hours)",
                "tooltip": null,
              },
              Object {
                "iconUrl": null,
                "id": "4c944b35-faaf-4515-a24f-1df59c1dfdd7",
                "state": false,
                "title": "Alternator Charger",
                "tooltip": null,
              },
              Object {
                "iconUrl": null,
                "id": "353d6e91-6039-4eca-9f86-e7b220f80a08",
                "state": false,
                "title": "Inverter",
                "tooltip": null,
              },
              Object {
                "iconUrl": null,
                "id": "5df5ee66-7b49-4e94-a440-277f602e0911",
                "state": false,
                "title": "A/C Electrical Outlets",
                "tooltip": null,
              },
              Object {
                "iconUrl": null,
                "id": "a8d4c375-b91a-467f-9f9e-351fd83e0f6b",
                "state": false,
                "title": "Solar Panels",
                "tooltip": null,
              },
            ],
            "iconUrl": null,
            "id": "1973200d-78b3-422c-9020-214189dbe826",
            "state": false,
            "title": "Electric Power System",
            "tooltip": null,
            "type": "checkbox",
          },
          Object {
            "configurationSubAmenities": Array [],
            "iconUrl": null,
            "id": "aa38a2e0-3d12-435c-a56f-d59fcca76114",
            "state": false,
            "title": "Propan Fuel System",
            "tooltip": null,
            "type": "checkbox",
          },
          Object {
            "configurationSubAmenities": Array [],
            "iconUrl": null,
            "id": "a02d7663-61c5-42bb-86e4-348f52c73f09",
            "state": false,
            "title": "Generator",
            "tooltip": null,
            "type": "checkbox",
          },
          Object {
            "configurationSubAmenities": Array [],
            "iconUrl": null,
            "id": "6c496237-3ef2-462b-ae3b-f2f4445ef666",
            "state": false,
            "title": "Shore Power Hookups",
            "tooltip": null,
            "type": "toggler",
          },
        ],
        "configurationSubAmenities": Array [],
        "iconUrl": null,
        "id": "480d527e-a832-4abc-9b6b-5c5b42850dc6",
        "title": "Power System",
      },
      Object {
        "configurationAmenityOptions": Array [],
        "configurationSubAmenities": Array [
          Object {
            "iconUrl": null,
            "id": "bf00cdfb-c28a-4065-b32d-dd6e7a3b6e4f",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Large Mattress",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "b3f036b6-8995-427a-a334-15fd5d20f49e",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Extra Storage",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "cd0e12e7-9d33-440e-b7be-f12d7fd0f97a",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Blackout Shades",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "9de56b33-8136-47af-8d0e-5c3e283b2368",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Sleep Sideways",
            "tooltip": null,
          },
        ],
        "iconUrl": null,
        "id": "a5f1e329-fa2a-4e91-b678-ccca813eb154",
        "title": "Bedroom",
      },
      Object {
        "configurationAmenityOptions": Array [],
        "configurationSubAmenities": Array [
          Object {
            "iconUrl": null,
            "id": "0925d8a2-3f91-4b2a-a33c-8c1971486a19",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Upgraded Speaker System",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "240b545f-6861-4e0f-b0ae-2d887f81f6e8",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Bluetooth Speaker",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "ce7a00ef-a5d9-4f01-87f6-74da13b2e797",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "TV",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "d7c5501b-6484-4137-8e4c-9f63f4b63f4e",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Wifi Router",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "4d3893f3-932b-4401-b627-58774ae30bd1",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Cell Signal Booster",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "70093afe-43ba-4706-89d1-23117632fa57",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Radio",
            "tooltip": null,
          },
        ],
        "iconUrl": null,
        "id": "8d08c5df-43bc-4597-938e-e18752a9664b",
        "title": "Entertainment",
      },
      Object {
        "configurationAmenityOptions": Array [],
        "configurationSubAmenities": Array [
          Object {
            "iconUrl": null,
            "id": "54cac3fb-2743-4953-b21b-225a2ea47447",
            "maxQuantity": 10,
            "quantity": 10,
            "state": false,
            "title": "King bed",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "b55ecf58-6a95-4bf3-b1fe-b8ac1bf1d2a0",
            "maxQuantity": 10,
            "quantity": 10,
            "state": false,
            "title": "Twin bed",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "8fd7b975-daa4-4a08-87b2-479a53f789e6",
            "maxQuantity": 10,
            "quantity": 10,
            "state": false,
            "title": "Queen bed",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "9152fe3c-456c-48bc-8b44-af28c11ae584",
            "maxQuantity": 10,
            "quantity": 10,
            "state": false,
            "title": "Single bed",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "ef65e471-a83c-46fb-9b0a-6e8583cf21b4",
            "maxQuantity": 10,
            "quantity": 10,
            "state": false,
            "title": "Bunk bed",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "156e80ca-432f-4850-aba7-e1abcbdc9b91",
            "maxQuantity": 10,
            "quantity": 10,
            "state": false,
            "title": "Dinette conversion",
            "tooltip": null,
          },
        ],
        "iconUrl": null,
        "id": "93ed1cf3-a645-4912-9d74-3000e67fe3d9",
        "title": "Accomodation",
      },
      Object {
        "configurationAmenityOptions": Array [],
        "configurationSubAmenities": Array [
          Object {
            "iconUrl": null,
            "id": "058785da-2eed-4c91-bac7-4791f54d0686",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "King bed",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "af80fb05-44ea-40ed-ac45-3765cedec993",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Twin bed",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "a78eb724-4bec-488d-a00e-8afe3997ce0a",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Queen bed",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "bd41dba4-e7e1-4e17-bc54-15ecfeeb0e87",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Single bed",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "2faad202-0c67-49fc-a785-2e1538666ba0",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Bunk bed",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "915089e7-48a1-4dc3-91f3-b7d82d465944",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Dinette conversion",
            "tooltip": null,
          },
        ],
        "iconUrl": null,
        "id": "245850cd-75b6-442f-a18b-837cd91ea6e5",
        "title": "Kitchen",
      },
      Object {
        "configurationAmenityOptions": Array [],
        "configurationSubAmenities": Array [
          Object {
            "iconUrl": null,
            "id": "2c826f37-91dc-4482-a67d-d2f2967b97c5",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "King bed",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "8be320dd-df33-4225-b8c4-6cb17c65e902",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Twin bed",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "de3c1f60-ea5d-4b8e-8964-d506c7530bfe",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Queen bed",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "b4894dcd-eb51-4953-b9fc-6b7142f95237",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Single bed",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "d9c7b20c-dec8-47f7-bf98-298a696f6844",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Bunk bed",
            "tooltip": null,
          },
          Object {
            "iconUrl": null,
            "id": "e544a8a3-3bc6-429c-8bdd-f3a26f9665dc",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Dinette conversion",
            "tooltip": null,
          },
        ],
        "iconUrl": null,
        "id": "ff75edbf-4f60-4b01-b3a0-79fbe2df8c10",
        "title": "Bathroom",
      },
      Object {
        "configurationAmenityOptions": Array [
          Object {
            "configurationSubAmenities": Array [
              Object {
                "iconUrl": null,
                "id": "8b5acb66-7cf1-4a6b-80ff-0c93d6859ae5",
                "state": false,
                "title": "Hookups Required For A/C",
                "tooltip": null,
              },
              Object {
                "iconUrl": null,
                "id": "3e047a0a-d37b-4d2f-8bf1-d5270b89090b",
                "state": false,
                "title": "Off Grid Air Conditioner",
                "tooltip": null,
              },
              Object {
                "iconUrl": null,
                "id": "a2226dd2-f731-42d5-b161-4a3179dbaed7",
                "state": false,
                "title": "A/C Only While Camper is On",
                "tooltip": null,
              },
            ],
            "iconUrl": null,
            "id": "38b30eae-7d94-4cc7-b08c-44409edece02",
            "state": false,
            "title": "Air conditioner",
            "tooltip": null,
            "type": "toggler",
          },
          Object {
            "configurationSubAmenities": Array [
              Object {
                "iconUrl": null,
                "id": "1eb933d8-ac20-4627-bbb8-d362261d03d1",
                "state": false,
                "title": "Portable Heater",
                "tooltip": null,
              },
              Object {
                "iconUrl": null,
                "id": "65418756-c3a6-4f5e-999a-9ffe62494536",
                "state": false,
                "title": "Air Heating System",
                "tooltip": null,
              },
              Object {
                "iconUrl": null,
                "id": "a4be548a-7f9b-4b8c-89d0-3c57cdfd7120",
                "state": false,
                "title": "Heating Only While Camper is On",
                "tooltip": null,
              },
            ],
            "iconUrl": null,
            "id": "4bf65e35-d340-486b-b498-1bb31bfa121d",
            "state": false,
            "title": "Heating",
            "tooltip": null,
            "type": "toggler",
          },
        ],
        "configurationSubAmenities": Array [
          Object {
            "iconUrl": null,
            "id": "996b052a-e8af-40ce-8749-cd48e906baaf",
            "maxQuantity": 0,
            "quantity": 0,
            "state": false,
            "title": "Ceiling Fan",
            "tooltip": null,
          },
        ],
        "iconUrl": null,
        "id": "eab0fdca-16c3-4184-aef8-311b1bf2ed01",
        "title": "Climate Control",
      },
    ]
  }
  amenityHealthSafetyItems={
    Array [
      Object {
        "active": true,
        "amenityHealthSafetyItemId": "2e9c8816-fbb2-48bf-9d17-885ffe1aa86a",
        "icon": "https://vancation-api-staging-assets.s3.us-west-1.amazonaws.com/store/healthsafety/80875471-87e6-42f9-82ac-d2c3ee4c300e/icon/82502e39c31a608d6cdf9f2882826f90.svg",
        "id": "80875471-87e6-42f9-82ac-d2c3ee4c300e",
        "title": "Social-distancing and other COVID-19-related guidelines apply",
      },
      Object {
        "active": false,
        "amenityHealthSafetyItemId": null,
        "icon": "https://vancation-api-staging-assets.s3.us-west-1.amazonaws.com/store/healthsafety/7c08c638-0823-449a-a696-4749421bd830/icon/d7779dbb02dee4b221db960f247c3a2d.svg",
        "id": "7c08c638-0823-449a-a696-4749421bd830",
        "title": "Security Campera / Recording Device",
      },
      Object {
        "active": false,
        "amenityHealthSafetyItemId": null,
        "icon": "https://vancation-api-staging-assets.s3.us-west-1.amazonaws.com/store/healthsafety/c962aef5-a0b8-455f-8d0c-e076a20086b0/icon/ba244de2af39acaf892d3656170d4586.svg",
        "id": "c962aef5-a0b8-455f-8d0c-e076a20086b0",
        "title": "Carbon Monoxide Alarm",
      },
      Object {
        "active": false,
        "amenityHealthSafetyItemId": null,
        "icon": "https://vancation-api-staging-assets.s3.us-west-1.amazonaws.com/store/healthsafety/742d00dd-8873-4589-92e2-de1dab997a34/icon/8a3cc70ea59e179612d152ad233a3655.svg",
        "id": "742d00dd-8873-4589-92e2-de1dab997a34",
        "title": "Smoke Alarm",
      },
      Object {
        "active": false,
        "amenityHealthSafetyItemId": null,
        "icon": "https://vancation-api-staging-assets.s3.us-west-1.amazonaws.com/store/healthsafety/0eee358a-ef4e-4545-8d66-76dc90c65434/icon/f31e769b3d5f598c32f0a2a4f1c59abe.svg",
        "id": "0eee358a-ef4e-4545-8d66-76dc90c65434",
        "title": "Fire Extinguisher",
      },
      Object {
        "active": true,
        "amenityHealthSafetyItemId": "d1e0f503-f1f6-4144-a5b5-8e318b159d39",
        "icon": "https://vancation-api-staging-assets.s3.us-west-1.amazonaws.com/store/healthsafety/e9284e42-3107-4527-88a3-5c1be8ccea5e/icon/f4d1f8594b6a9758a0c996388c1cd7a3.svg",
        "id": "e9284e42-3107-4527-88a3-5c1be8ccea5e",
        "title": "First Aid kit",
      },
    ]
  }
  camperId="camperId"
  enableReinitialize={true}
  errors={Object {}}
  handleSubmit={[MockFunction]}
  handleSwitchChange={[Function]}
  handleValidateOnSubmit={[Function]}
  hideModal={[Function]}
  isCamperExist={true}
  isLoading={true}
  isLoadingAmenities={true}
  isLoadingHealthSafeties={true}
  isValid={true}
  leavePagePrepare={[Function]}
  mapPropsToValues={[Function]}
  onMaxAccommodationQuantityCallback={[Function]}
  onMaxCustomAccommodationQuantityCallback={[Function]}
  onSubmit={[Function]}
  removeCustomAccommodation={[Function]}
  router={
    Object {
      "push": [MockFunction],
    }
  }
  setFieldValue={[MockFunction]}
  setFormikState={[MockFunction]}
  showMessage={[Function]}
  showModal={[Function]}
  store={
    Object {
      "clearActions": [Function],
      "dispatch": [MockFunction],
      "getActions": [Function],
      "getState": [Function],
      "replaceReducer": [Function],
      "subscribe": [Function],
    }
  }
  touched={Object {}}
  validateForm={[MockFunction]}
  validationSchema={[Function]}
  values={
    Object {
      "amenities": Array [
        Object {
          "configurationAmenityOptions": Array [
            Object {
              "configurationSubAmenities": Array [
                Object {
                  "icon": "/images/listing/amenities-svg/climate_control/ceiling-fan.svg",
                  "id": "1",
                  "state": false,
                  "title": "Сeiling fan",
                },
              ],
              "icon": "/images/listing/amenities-svg/climate_control/ceiling-fan.svg",
              "id": "1",
              "state": false,
              "title": "Сeiling fan",
            },
          ],
          "icon": "/images/listing/amenities-svg/climate_control/air_conditioning.svg",
          "id": "1",
          "title": "Climate control",
        },
      ],
      "amenityHealthSafetyItems": Array [
        Object {
          "icon": "some icon",
          "id": "some id",
          "title": "some title",
        },
      ],
    }
  }
/>
`;
